update tool exception type